force-app/core/default/objects/XC_AFCC_Case_Conversation_Link__c/XC_AFCC_Case_Conversation_Link__c.object-meta.xml
<CustomObject>
    <label>Case Conversation Link</label>
    <nameField>
        <displayFormat>LK-{000000}</displayFormat>
        <label>XC AFCC Case Conversation Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Conversation Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>