force-app/core/default/objects/XC_AFCC_Case_Conversation_Link__c/fields/XC_AFCC_Case__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Case__c</fullName>
    <label>Case</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case</relationshipLabel>
    <relationshipName>XC_AFCC_CaseConversationLinks</relationshipName>
    <type>Lookup</type>
</CustomField>