force-app/core/default/objects/XC_AFCC_Case_Conversation_Link__c/fields/XC_AFCC_Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Confidence_Level__c</fullName>
    <label>Confidence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>