force-app/core/default/objects/XC_AFCC_Case_Conversation_Link__c/fields/XC_AFCC_Demo_Scenario_Id__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Demo_Scenario_Id__c</fullName>
    <label>Scenario Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>