force-app/core/default/objects/XC_AFCC_Case_Conversation_Link__c/fields/XC_AFCC_Link_Method__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Link_Method__c</fullName>
    <label>Link Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIRECT</fullName>
            </value>
            <value>
                <fullName>IMPORTED</fullName>
            </value>
            <value>
                <fullName>SYNTHETIC</fullName>
            </value>
            <value>
                <fullName>INFERRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>