force-app/core/default/objects/XC_AFCC_Case_Conversation_Link__c/fields/XC_AFCC_Messaging_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Messaging_Session_Id__c</fullName>
    <label>Messaging Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>